css/styles.css
body, html {
    box-sizing: border-box;
    font-family: sans-serif;
    height: 100%;
}

/*https://www.w3schools.com/howto/howto_js_sidenav.asp*/
/* The side navigation menu */
.sidenav {
    height: 100%; /* 100% Full-height */
    width: 0; /* 0 width - change this with JavaScript */
    position: fixed; /* Stay in place */
    z-index: 1; /* Stay on top */
    top: 0;
    left: 0;
    background-color: #000; /* Black*/
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 60px; /* Place content 60px from the top */
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */

.sidenav ul {
    color: white;
    list-style: none;
    display: block;
    padding-left: 12px;
}

.sidenav li {
    padding: 12px 0;
    cursor: pointer;
    transition: 0.3s;
}

.sidenav li:hover {
    color: red;
}

/* When you mouse over the navigation links, change their color */

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

#header {
    padding-top: 8px;
    padding-bottom: 8px;
    background: #000;
    color: white;
    display: flex;
    flex-wrap: wrap;
}

.headerTitle h1 {
    font-size: 24px;
    margin-top: 10px;
    margin-bottom: 8px;
    margin-left: 12px;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
    transition: margin-left .5s;
    height: 100%;
    margin-top: -61px;
    padding-top: 61px;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

#map {
    height: 100%;
}

.openbtn {
    padding-left: 20px;
    font-size: 36px;
    cursor: pointer;
    color: red;
    transition: 0.3s;
}

.openbtn:hover {
    color: white;
}

.closebtn {
    padding-top: 8px;
    font-size: 36px;
    cursor: pointer;
    color: white;
    transition: 0.3s;
}

.closebtn:hover {
    color: red;
}

h3 {
    margin-top: 0;
    margin-bottom: 0;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

